# counselhub

./: .dockerignore  .env.sample  .gitignore  docker-compose.yml  gunicorn.conf.py  manage.py  pyproject.toml
apps/court/: admin.py  apps.py  models.py  resources.py  serializers.py  uitils.py  urls.py  views.py  widgets.py
apps/court/migrations/: 0001_initial.py  0002_seed_judicial_authorities.py
apps/general/: exceptions.py  urls.py  views.py
apps/general/services/: neshan.py
counsel_hub/: asgi.py  urls.py  wsgi.py
counsel_hub/settings/: __init__.py  applications.py  auth.py  common.py  constants.py  database.py  django.py  django_headers_config.py  internationalization.py  locale.py  logging.py  middleware.py  rest_framework.py  storages.py  templates.py
deployment/: Dockerfile  entrypoint.sh  nginx.conf
locale/fa/LC_MESSAGES/: django.po
templates/admin/static/admin/css/: base.css  fonts.css
utils/: __init__.py  linkify.py  log_formatter.py
